--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+flask==2.3.2
+flask-cors==3.0.10
+pandas==2.1.4
+scikit-learn==1.3.2
+gunicorn==21.2.0
